updated documentation to give credit to source for a function

--- a/twitter/twitter.ipynb
+++ b/twitter/twitter.ipynb
@@ -143,6 +143,9 @@
     "    \n",
     "    returns:\n",
     "        This function will return a df associated to the tweet id, created_at and content\n",
+    "        \n",
+    "    source:\n",
+    "        [yanofsky](https://gist.github.com/yanofsky/5436496)\n",
     "    '''\n",
     "    #initialize a list to hold all the tweepy Tweets\n",
     "    alltweets = []  \n",
