--- a/twitter/twitter.ipynb
+++ b/twitter/twitter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "776921b0-f7f2-4e99-938c-e5b2dcce694f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "4108740e-6507-4946-8a40-c3420167acda",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
     "# constants\n",
     "PATH = os.path.expanduser('~') + '/'\n",
     "env_file = '.env'\n",
-    "today = datetime.today().strftime('%Y-%m-%d')\n"
+    "today = datetime.today().strftime('%Y-%m-%d')"
    ]
   },
   {
@@ -54,9 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "403d8641-957b-4d89-bfd3-ce4eefe168ac",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def connect_twitter(api_key, secret_key, access_token, secret_access_token):\n",
@@ -100,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b5e48499-d1fe-4cbf-805a-37557cc5dad1",
+   "execution_count": 5,
+   "id": "90bb6aea-6d52-43a2-96ca-12a24131b051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,8 +129,16 @@
     "    \n",
     "    if not exists:\n",
     "        os.makedirs(path + date)\n",
-    "        print(\"New Directory Created\")\n",
-    "\n",
+    "        print(\"New Directory Created\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c3d3641b-31a5-4030-8bac-d6945d3677bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_all_tweets(screen_name, api = api, today = today):\n",
     "    '''\n",
     "    This function will get the latest ~3200 tweets associated to a twitter screen name.\n",
@@ -193,8 +203,16 @@
     "    mk_dir(path = './data/', date = today)\n",
     "    df.to_csv('./data/{}/{}_tweets_{}.csv'.format(today, screen_name, today), index = False)\n",
     "    time.sleep(10)\n",
-    "    return df\n",
-    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b5e48499-d1fe-4cbf-805a-37557cc5dad1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def read_tweet_data(path):\n",
     "    '''\n",
     "    This function will identify if todays data has already been scraped from the twitter API.\n",
