connected to twitter api

--- a/twitter/twitter.ipynb
+++ b/twitter/twitter.ipynb
@@ -54,12 +54,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "d5fe4bb1-fbb9-4d5b-8522-ab540f615c79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def env_reader(env_path):\n",
+    "    '''\n",
+    "    This function will read the environment variables given the location of where the\n",
+    "    .env file is located\n",
+    "    '''\n",
+    "    if not load_dotenv(env_path):\n",
+    "        return print('Environment File Not Found')\n",
+    "    return print('Loaded!')\n",
+    "\n",
+    "env_reader(os.getcwd() + '/' + env_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "403d8641-957b-4d89-bfd3-ce4eefe168ac",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection to Twitter established.\n"
+     ]
+    }
+   ],
    "source": [
     "def connect_twitter(api_key, secret_key, access_token, secret_access_token):\n",
     "    '''\n",
