updated twitter pipeline to fetch tweets associated to a lsit of hashtags

--- a/twitter/twitter.ipynb
+++ b/twitter/twitter.ipynb
@@ -136,9 +136,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d301263-8cec-44fa-8875-46e4a8b02991",
+   "metadata": {},
+   "source": [
+    "## Get Tweets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "90bb6aea-6d52-43a2-96ca-12a24131b051",
+   "id": "5c258b0f-2cc8-456b-98c8-48a5cd57d3a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c3d3641b-31a5-4030-8bac-d6945d3677bf",
+   "id": "27bc6ef6-3cce-466c-bdcf-4562ae6591d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b5e48499-d1fe-4cbf-805a-37557cc5dad1",
+   "id": "e803b37c-a6d0-4ff4-afc7-f391ed906586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +299,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "488f1ecc-c671-4db1-a7d5-7f493f3fcf64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "handles = [\n",
+    "    'TorontoStar', 'CP24'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "bc882469-248c-40be-a673-c298845d85bd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "if today not in os.listdir('./data/'):\n",
+    "    for user in handles:\n",
+    "        print(user)\n",
+    "        _ = get_all_tweets(user)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b9b6a988-210c-4261-9edc-319bd8291953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "tweets_df = read_tweet_data(\n",
+    "    path = './data/'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fabd3e1-ff3a-4f10-ba71-c341bfb3f9be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "187ebe55-b0ce-4b61-aeef-006d933bad8a",
+   "metadata": {},
+   "source": [
+    "## Preprocess Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07fddc1e-5818-4246-bd4a-c17fa6105e8f",
    "metadata": {},
    "outputs": [],
    "source": []
