--- a/twitter/twitter.ipynb
+++ b/twitter/twitter.ipynb
@@ -299,22 +299,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "488f1ecc-c671-4db1-a7d5-7f493f3fcf64",
    "metadata": {},
    "outputs": [],
    "source": [
     "handles = [\n",
-    "    'TorontoStar', 'CP24'\n",
+    "    'CP24', 'TPSOperations', 'TorontoPolice'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "bc882469-248c-40be-a673-c298845d85bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CP24\n",
+      "New Directory Created\n",
+      "TPSOperations\n",
+      "TorontoPolice\n",
+      "CPU times: user 4.27 s, sys: 623 ms, total: 4.89 s\n",
+      "Wall time: 1min 4s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "if today not in os.listdir('./data/'):\n",
@@ -325,10 +338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b9b6a988-210c-4261-9edc-319bd8291953",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 87.2 ms, sys: 13.2 ms, total: 100 ms\n",
+      "Wall time: 135 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "tweets_df = read_tweet_data(\n",
@@ -338,10 +360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8fabd3e1-ff3a-4f10-ba71-c341bfb3f9be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9749, 15)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tweets_df.shape"
    ]
@@ -356,8 +389,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "6325112e-cbf5-41ef-a6fe-cc3b29f954f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_hashtags(row):\n",
+    "    if row['hashtags_count'] > 1:\n",
+    "        tags = row['hashtags']\n",
+    "        hashies = []\n",
+    "        for t in tags:\n",
+    "            hashies.append(t['text'])\n",
+    "        return hashies\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "00242c26-0f4e-4d33-9b32-fb7bb27b4466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_df['hashtags_count'] = tweets_df['hashtags'].apply(lambda x : len(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bb8b4735-f1f4-4e5e-90d4-400efa0fe29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 59.7 ms, sys: 15.5 ms, total: 75.2 ms\n",
+      "Wall time: 82.1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time tweets_df['hashtags'] = tweets_df.apply(lambda x : parse_hashtags(x), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "07c57286-05be-4a6a-a509-f2e6bdbdfad6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021-01-15 21:24:00+00:00'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_df[tweets_df['author_name'] == 'Toronto Police'].tweet_created_at.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "07fddc1e-5818-4246-bd4a-c17fa6105e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tweets_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d519d939-4e61-4310-9fcc-f12fb7b2e869",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed91f0d1-ebf5-4237-aba4-fa7f0c6e46a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a59bfe8b-4d11-435a-9868-3a5cb2db8f6f",
    "metadata": {},
    "outputs": [],
    "source": []
