updated for clarity of results

--- a/rec_sys/hybrid/hybrid.ipynb
+++ b/rec_sys/hybrid/hybrid.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "dd29a8a2-8369-4d73-bded-ccf8f8b9a29b",
    "metadata": {},
    "outputs": [],
@@ -230,8 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6min 12s, sys: 1min 38s, total: 7min 50s\n",
-      "Wall time: 1min 36s\n"
+      "CPU times: user 6min 4s, sys: 2min 16s, total: 8min 21s\n",
+      "Wall time: 2min 16s\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "09f01d35-3555-4b07-96fe-d7eae0076700",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6b26da98-8d0c-47c6-9522-2c288fa3a11f",
    "metadata": {},
    "outputs": [],
@@ -274,17 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "953c2da7-cc57-48d9-9e32-ce25f4386de3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fae082a17f0>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fc6eb0d5af0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "b65fc7b6-3cdd-495c-a90c-6dafd6b7efee",
    "metadata": {},
    "outputs": [],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "id": "8d0a48d1-c03f-4520-ac29-9edf60c33fbf",
    "metadata": {},
    "outputs": [
@@ -316,16 +316,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 2.9300\n"
+      "RMSE: 2.9305\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2.9299770991365213"
+       "2.930460332677772"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "id": "108e3c98-4b33-4c6d-a50b-387ed41929f6",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
+   "id": "ffc5e394-9527-48c7-b74e-208614161204",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r_id = df['reader_id'].values[0]\n",
+    "b_id = df['book_id'].values[0]\n",
+    "n_recs = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "fb8939c8-ce0a-404a-8298-623f249705ac",
    "metadata": {},
    "outputs": [
@@ -422,53 +434,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>24451</th>\n",
-       "      <td>2306</td>\n",
-       "      <td>5</td>\n",
-       "      <td>276</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>67</td>\n",
-       "      <td>8187</td>\n",
+       "      <th>2552</th>\n",
+       "      <td>2564</td>\n",
+       "      <td>10</td>\n",
+       "      <td>263</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>65</td>\n",
+       "      <td>5456</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28108</th>\n",
-       "      <td>2419</td>\n",
+       "      <th>7078</th>\n",
+       "      <td>1273</td>\n",
+       "      <td>10</td>\n",
+       "      <td>336</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>189</td>\n",
+       "      <td>2391</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16190</th>\n",
+       "      <td>2919</td>\n",
        "      <td>2</td>\n",
-       "      <td>548</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>126</td>\n",
-       "      <td>5865</td>\n",
+       "      <td>380</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5241</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10646</th>\n",
-       "      <td>2328</td>\n",
+       "      <th>22843</th>\n",
        "      <td>8</td>\n",
-       "      <td>594</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>12</td>\n",
-       "      <td>22890</td>\n",
+       "      <td>10</td>\n",
+       "      <td>668</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19</td>\n",
+       "      <td>23633</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13206</th>\n",
-       "      <td>829</td>\n",
-       "      <td>3</td>\n",
-       "      <td>96</td>\n",
-       "      <td>2004</td>\n",
+       "      <th>7415</th>\n",
+       "      <td>1767</td>\n",
+       "      <td>2</td>\n",
        "      <td>195</td>\n",
-       "      <td>8629</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20887</th>\n",
-       "      <td>2880</td>\n",
-       "      <td>8</td>\n",
-       "      <td>83</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>82</td>\n",
-       "      <td>28214</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>84</td>\n",
+       "      <td>23978</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -477,33 +489,33 @@
       ],
       "text/plain": [
        "       book_id  book_rating  num_pages  publish_year  book_price  reader_id  \\\n",
-       "24451     2306            5        276          2011          67       8187   \n",
-       "28108     2419            2        548          2011         126       5865   \n",
-       "10646     2328            8        594          2002          12      22890   \n",
-       "13206      829            3         96          2004         195       8629   \n",
-       "20887     2880            8         83          2013          82      28214   \n",
+       "2552      2564           10        263          2012          65       5456   \n",
+       "7078      1273           10        336          2014         189       2391   \n",
+       "16190     2919            2        380          2020          71       5241   \n",
+       "22843        8           10        668          2019          19      23633   \n",
+       "7415      1767            2        195          2020          84      23978   \n",
        "\n",
        "       est  \n",
-       "24451  5.0  \n",
-       "28108  5.0  \n",
-       "10646  5.0  \n",
-       "13206  5.0  \n",
-       "20887  5.0  "
+       "2552   5.0  \n",
+       "7078   5.0  \n",
+       "16190  5.0  \n",
+       "22843  5.0  \n",
+       "7415   5.0  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hybrid(234,4539,5)"
+    "hybrid(r_id, b_id, n_recs, df, cosine_sim, svd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed05389f-dcf5-4ada-a8ec-6122f8c179b6",
+   "id": "ca3e8c87-3092-4c73-821d-31e71acc0dea",
    "metadata": {},
    "outputs": [],
    "source": []
