added fetching levels fyi data

--- a/salary_analytics/salary.ipynb
+++ b/salary_analytics/salary.ipynb
@@ -1651,35 +1651,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 94,
    "id": "8f713258-26d6-49df-9382-96256a9e3060",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d['is_ds'] = d['job_title'].apply(lambda x : [True if str(x).lower() in ['data', 'science', 'scientist', 'research'] else False][0])"
+    "d2= d.copy()\n",
+    "d2['is_ds'] = d2['job_title'].apply(lambda x : [True if str(x).lower() in ['data', 'science', 'data science', 'data scientist', 'research'] else False][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 95,
    "id": "e20aa8b5-b817-455a-962d-13b2f5d90474",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'parsed_annual_wage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-be644f33b8b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'is_ds'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparsed_annual_wage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5463\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5464\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5465\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5466\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5467\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'parsed_annual_wage'"
-     ]
+     "data": {
+      "text/plain": [
+       "209000.0"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "d[d['is_ds']==True].parsed_annual_wage.max()"
+    "d2[d2['is_ds']==True].annual_wage.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "3dcad0ec-2c62-4bcc-81fd-e82055bf9f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>age_range</th>\n",
+       "      <th>yoe</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>org</th>\n",
+       "      <th>max_edu</th>\n",
+       "      <th>loc_city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>annual_wage</th>\n",
+       "      <th>...</th>\n",
+       "      <th>signing_bonus</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>vacation_days_yearly</th>\n",
+       "      <th>sick_days_yearly</th>\n",
+       "      <th>days_per_week_in_office</th>\n",
+       "      <th>open_wage_discussions</th>\n",
+       "      <th>maternity_leave_months</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th>is_ds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9879</th>\n",
+       "      <td>12/7/2021 2:37:40</td>\n",
+       "      <td>26-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>data science</td>\n",
+       "      <td>data scientist</td>\n",
+       "      <td>ibm</td>\n",
+       "      <td>Master's Degree</td>\n",
+       "      <td>sf</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>209000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13000.0</td>\n",
+       "      <td>usd</td>\n",
+       "      <td>19</td>\n",
+       "      <td>unlim</td>\n",
+       "      <td>None, I work fully remote</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>6</td>\n",
+       "      <td>male</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              timestamp age_range yoe      Industry       job_title  org  \\\n",
+       "9879  12/7/2021 2:37:40     26-29   4  data science  data scientist  ibm   \n",
+       "\n",
+       "              max_edu loc_city country  annual_wage  ...  signing_bonus  \\\n",
+       "9879  Master's Degree       sf     usa     209000.0  ...        13000.0   \n",
+       "\n",
+       "      currency  vacation_days_yearly sick_days_yearly  \\\n",
+       "9879       usd                    19            unlim   \n",
+       "\n",
+       "        days_per_week_in_office open_wage_discussions maternity_leave_months  \\\n",
+       "9879  None, I work fully remote                   yes                      6   \n",
+       "\n",
+       "     gender ethnicity is_ds  \n",
+       "9879   male   unknown  True  \n",
+       "\n",
+       "[1 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2[(d2['is_ds'] == True) & (d2['annual_wage'] == 209000) ]"
    ]
   },
   {
