caveats on salary analysis

--- a/salary_analytics/salary.ipynb
+++ b/salary_analytics/salary.ipynb
@@ -1206,6 +1206,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66bc9f04-0f79-4700-9cc7-9dc5542533f3",
+   "metadata": {},
+   "source": [
+    "## Caveats\n",
+    "Please be aware that there are a lot of things to consider when analyzing and conducting this analysis. The results, can be interpreted differently from different datasets, which is the first caveat. This data we're conducting the analysis on is provided anonymously and through LinkedIn.\n",
+    "\n",
+    "\n",
+    "## Concluding Remarks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1feadcf4-3a84-436b-9ebd-d296f6a41cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4b6c36-f1f0-4492-840e-d0aeb3a98ca9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b572adb3-866a-4a99-aad9-f756b78fd861",
