added concluding remarks on the analysis

--- a/salary_analytics/salary.ipynb
+++ b/salary_analytics/salary.ipynb
@@ -1214,7 +1214,8 @@
     "Please be aware that there are a lot of things to consider when analyzing and conducting this analysis. The results, can be interpreted differently from different datasets, which is the first caveat. This data we're conducting the analysis on is provided anonymously and through LinkedIn.\n",
     "\n",
     "\n",
-    "## Concluding Remarks"
+    "## Concluding Remarks\n",
+    "Overall the analysis conducted was interesting but with this dataset a lot more interesting things and questions could be answers. I created a generalized function which would answer a variety of questions I proposed for this article simply out of curiosity. The data is publically available and more individuals could contribute to it even after the posting of this article. With that being said, feel free to ask your own questions, and spark your own curiosity. For individuals wanting to break into a data driven role, being curious, taking initiative, communicating results and thinking critically are essential to be successful in any data driven roles. Continue the work on this by answering unanswered questions."
    ]
   },
   {
