finished concluding remarks and conclusion section

--- a/salary_analytics/salary.ipynb
+++ b/salary_analytics/salary.ipynb
@@ -1211,7 +1211,7 @@
    "metadata": {},
    "source": [
     "## Caveats\n",
-    "Please be aware that there are a lot of things to consider when analyzing and conducting this analysis. The results, can be interpreted differently from different datasets, which is the first caveat. This data we're conducting the analysis on is provided anonymously and through LinkedIn.\n",
+    "Please be aware that there are a lot of things to consider when analyzing and conducting this analysis. A saying in data science is that the quality of your results is purely dependednt on the quality of the data. With that beings said, since the data in this article was provided anonymously from random people through LinkedIn, a lot of the results is based on the integreity of each individual who provided information. Furthermore, the data could definetly be cleaned a lot more rigerously. For the purposes of this article I aimed to clean **majority** of the data but not all, with that being said, the results observed above could definetly be different if further cleaning was done. Finally, different datasets trying to answer the same questions can come to different conclusions, if Glassdoor or Indeed were to do this exact same analysis to answer the same questions, I would be skeptical to see that they get the same sort of results / conclusions. \n",
     "\n",
     "\n",
     "## Concluding Remarks\n",
@@ -1760,15 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14039432-34e3-4b0f-b1f8-1d8e65346d21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b56953c-b37b-4649-a55c-ca260c7f53b4",
+   "id": "10643aea-dcb7-49ff-8ebb-c79d19704acc",
    "metadata": {},
    "outputs": [],
    "source": []
